--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^2.13.0"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^2.0.0",
     "@vue/test-utils": "^1.0.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.0.1",
